--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@ span {
   font-family: 'Prata', Arial, Helvetica, sans-serif;
   font-size: 2.5rem;
 }
+
+input {
+  font-family: Arial, Helvetica, sans-serif;
+}
