--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,34 @@ h2{
   font-family: 'Prata', Arial, Helvetica, sans-serif;
 }
 
-span {
+.span-numbers {
   font-family: 'Prata', Arial, Helvetica, sans-serif;
   font-size: 2.5rem;
+}
+
+.active {
+  color: #D5C9BE;
+}
+
+.hover-link {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.hover-link::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #D5C9BE;
+  transform: scaleX(0);
+  transform-origin: bottom left;
+  transition: transform 0.3s ease;
+}
+
+.hover-link:hover::after {
+  transform: scaleX(1);
 }
